style.css
/* ... */
.xtabs-tab span {
    color: var(--sd-button-normal-text-color);
}

.xtabs-tab .mask-icon {
    background-color: var(--sd-button-normal-text-color);
}

.xtabs-tab.active {
    background-color: var(--sd-button-selected-color);
    color: var(--sd-button-selected-text-color);
}

.xtabs-tab.active span {
    color: var(--sd-button-selected-text-color);
}

.xtabs-tab.active .mask-icon {
    background-color: var(--sd-button-selected-text-color);
}

.xtabs-tab:hover {
    background-color: var(--sd-button-hover-color);
    color: var(--sd-button-hover-text-color);
}

.xtabs-tab:hover span {
    color: var(--sd-button-hover-text-color);
}

.xtabs-tab:hover .mask-icon {
    background-color: var(--sd-button-hover-text-color);
}

.accordion-bar .xtabs-tab {
    width: 100%;
}

* .gradio-video video,
* [data-testid="image"] img {
    object-fit: contain;
}

* .gradio-video .wrap,
* [data-testid="image"] .wrap {
    display: flex;
    flex-direction: column;
}

.gr-group {
    width: 100%;
    position: relative;
}

.border-padding {
    padding: var(--sd-panel-padding);
}

.full-height>textarea,
.full-height {
    height: 100% !important;
    resize: none;
}

h1 {
    line-height: 1em;
    margin: 0;
}

.no-padding-one,
.no-padding {
    padding: 0;
}

.no-padding>* {
    padding: 0;
}

.extra-networks-tab {
    padding: 0 !important;
}

.extra-networks-page {
    display: flex;
    height: 100%;
}

.extra-networks .second-line {
    display: flex;
    width: -moz-available;
    width: -webkit-fill-available;
}

.extra-networks .second-line {
  gap: var(--sd-group-gap);
  margin: var(--sd-group-border-size);
}

.extra-networks .search {
    flex: 1;
    min-width: unset;
    padding: 0;
}

.extra-networks .description {
    flex: 3;
    padding: 0;
}

.extra-network-cards .card {
    height: fit-content;
    margin: 0 0 0.5em 0.5em;
    position: relative;
    scroll-snap-align: start;
    scroll-margin-top: 0;
}

.extra-network-cards .card .overlay {
    position: absolute;
    bottom: 0;
    padding: 0.2em;
    z-index: 10;
    width: 100%;
    background: none;
}

.extra-network-cards .card .overlay .name {
    text-shadow: 1px 1px black;
    color: white;
    overflow-wrap: break-word;
}

.extra-network-cards .card .preview {
    box-shadow: var(--button-shadow);
    min-height: 30px;
}

.extra-network-cards .card:hover .overlay {
    background: rgba(0, 0, 0, 0.40);
}

.extra-network-cards .card:hover .preview {
    box-shadow: none;
    filter: grayscale(100%);
}

.extra-network-cards .card:hover .overlay {
    background: rgba(0, 0, 0, 0.40);
}

.extra-network-cards .card .overlay .tags {
  padding: 4px;
  display: none;
  overflow-wrap: break-word;
  position: absolute;
  top: 100%;
  background: rgba(0, 0, 0, 0.40);
}

.extra-network-cards .card .overlay .tag {
    padding: 2px;
    margin: 2px;
    background: var(--neutral-700);
    cursor: pointer;
    display: inline-block;
}

.extra-network-cards .card .actions>span {
    padding: 4px;
}

.extra-network-cards .card:hover .actions {
    display: block;
}

.extra-network-cards .card:hover .overlay .tags {
    display: block;
}

.extra-network-cards .card .actions {
    font-size: 3em;
    display: none;
    text-align-last: right;
    cursor: pointer;
    font-variant: unicase;
    position: absolute;
    z-index: 100;
    right: 0;
    height: 0.7em;
    width: 100%;
    background: rgba(0, 0, 0, 0.40);
}

.extra-network-cards .card-list {
  padding: 0;
  background: var(--sd-input-background-color);
  cursor: pointer;
  height: auto !important;
  justify-content: start !important;
  word-break: break-word;
}

.extra-details {
  position: fixed;
  bottom: 50%;
  left: 50%;
  transform: translate(-50%, 50%);
  padding: 0.8em;
  z-index: 100;
  width: fit-content;
  max-width: 100%;
  background: var(--sd-main-background-color);
  border: var(--sd-border-size) solid var(--sd-input-border-color);
  border-radius: var(--sd-border-radius);
}

.extra-details > div {
  overflow-y: auto;
  min-height: 40vh;
  max-height: 80vh;
  align-self: flex-start;
}

.extra-details td:first-child {
  font-weight: bold;
  vertical-align: top;
}

.extra-details td .gradio-image {
  max-height: 70vh;
}

.extra-details .gradio-row {
  flex-wrap: nowrap;
}

#txt2img_description,
#img2img_description {
    overflow-y: auto !important;
}

#txt2img_description>label>textarea,
#img2img_description>label>textarea {
    font-size: 0.9em
}

.extra-networks .buttons {
    position: absolute;
    right: 0;
    margin-right: calc(2*var(--sd-panel-padding));
    margin-top: -2px;
}

.extra-networks .buttons button {
    font-size: 1.4em;
}

*.extra-network-cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
    grid-template-rows: max-content;
    width: 100%;
    height: calc(100vh - 168px);
    overflow-x: hidden;
    overflow-y: auto;
    gap: var(--sd-gap-size);
}

*.extra-network-cards .card {
    display: flex;
    justify-content: center;
    margin: 0;
    height: 160px;
    width: fit-content;
}

*.extra-network-cards .card img {
    object-fit: cover;
    width: 100%;
    height: auto;
    border-radius: var(--sd-border-radius);
    pointer-events: none;
}

*.extra-network-cards .card:hover .button-row {
    display: flex;
}

*.extra-network-cards .card:hover {
    cursor: pointer;
}

*.extra-network-cards .card .button-row {
    position: absolute;
    display: none;
    z-index: 1;
    top: 0px;
    right: 0;
    background-color: var(--sd-input-background-color);
    padding: 2px;
}

*.extra-network-cards .card .card-button:hover {
    background-color: var(--sd-main-accent-color);
}

*.extra-network-cards .card .card-button {
    background-color: var(--sd-label-color);
    width: 24px;
    height: 24px;
}
/* ... */

